--- a/core/pom.xml
+++ b/core/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>org.apache.carbondata</groupId>
     <artifactId>carbondata-parent</artifactId>
-    <version>1.3.0-SNAPSHOT</version>
+    <version>1.3.0</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
@@ -124,9 +124,9 @@
               <!-- Execute the shell script to generate the CarbonData build information. -->
               <target>
                 <exec executable="bash">
-                  <arg value="${project.basedir}/../build/carbondata-build-info"/>
-                  <arg value="${project.build.directory}/extra-resources"/>
-                  <arg value="${project.version}"/>
+                  <arg value="${project.basedir}/../build/carbondata-build-info" />
+                  <arg value="${project.build.directory}/extra-resources" />
+                  <arg value="${project.version}" />
                 </exec>
               </target>
             </configuration>
